--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ plugins {
     // https://plugins.gradle.org/plugin/org.jetbrains.kotlin.android
     id("org.jetbrains.kotlin.android") version "1.9.0" apply false
     // https://github.com/mannodermaus/android-junit5
-    // Don't forget to update ext.mannodermaus_version
+    // Don't forget to update ext.mannodermausVersion
     id("de.mannodermaus.android-junit5") version "1.9.3.0" apply false
 }
 
@@ -47,75 +47,75 @@ ext {
     // 9.0      88.15
     // 8.1      91.01
     // 8.0      93.77
-    min_sdk_version = 26
-    target_sdk_version = 33
-    compile_sdk_version = 33
+    minSdkVersion = 26
+    targetSdkVersion = 33
+    compileSdkVersion = 33
 
     // https://github.com/google/desugar_jdk_libs
-    desugar_version = "2.0.3"
+    desugarVersion = "2.0.3"
 
     // https://developer.android.com/jetpack/androidx/versions
 
     // 1.8 needs Android 14 !
-    androidx_activity_version = "1.7.2"
+    androidxActivityVersion = "1.7.2"
 
-    androidx_annotation_version = "1.6.0"
+    androidxAnnotationVersion = "1.6.0"
     // 1.7 needs Android 14 !
-    androidx_appcompat_version = "1.6.1"
+    androidxAppcompatVersion = "1.6.1"
     // 1.3 needs Android 14 !
-    androidx_camerax_version = "1.2.3"
-    androidx_cardview_version = "1.0.0"
-    androidx_collection_version = "1.3.0-alpha04"
-    androidx_constraintlayout_core_version = "1.0.4"
+    androidxCameraxVersion = "1.2.3"
+    androidxCardviewVersion = "1.0.0"
+    androidxCollectionVersion = "1.3.0-alpha04"
+    androidxConstraintlayoutCoreVersion = "1.0.4"
     // 2.2 needs Android 14 !
-    androidx_constraintlayout_version = "2.1.4"
-    androidx_coordinatorlayout_version = "1.2.0"
+    androidxConstraintlayoutVersion = "2.1.4"
+    androidxCoordinatorlayoutVersion = "1.2.0"
     // 1.12 needs Android 14 !
-    androidx_core_version = "1.11.0-beta02"
-    androidx_customview_version = "1.2.0-alpha02"
-    androidx_documentfile_version = "1.1.0-alpha01"
-    androidx_drawerlayout_version = "1.2.0"
-    androidx_exifinterface_version = "1.3.6"
-    androidx_fragment_version = "1.6.1"
-    androidx_interpolator_version = "1.0.0"
-    androidx_lifecycle_version = "2.6.1"
-    androidx_preference_version = "1.2.1"
-    androidx_recyclerview_version = "1.3.1"
-//        androidx_slidingpanelayout_version = "1.2.0"
-    androidx_viewpager2_version = "1.1.0-beta02"
-    androidx_window_version = "1.1.0"
+    androidxCoreVersion = "1.11.0-beta02"
+    androidxCustomviewVersion = "1.2.0-alpha02"
+    androidxDocumentfileVersion = "1.1.0-alpha01"
+    androidxDrawerlayoutVersion = "1.2.0"
+    androidxExifinterfaceVersion = "1.3.6"
+    androidxFragmentVersion = "1.6.1"
+    androidxInterpolatorVersion = "1.0.0"
+    androidxLifecycleVersion = "2.6.1"
+    androidxPreferenceVersion = "1.2.1"
+    androidxRecyclerviewVersion = "1.3.1"
+//        androidxSlidingpanelayoutVersion = "1.2.0"
+    androidxViewpager2Version = "1.1.0-beta02"
+    androidxWindowVersion = "1.1.0"
 
     // https://github.com/material-components/material-components-android/releases
-    google_material_version = "1.9.0"
+    googleMaterialVersion = "1.9.0"
 
-    //google_auto_service_version = "1.0.1"
+    //googleAutoServiceVersion = "1.0.1"
 
     // https://jsoup.org/
-    jsoup_version = "1.16.1"
+    jsoupVersion = "1.16.1"
 
     // https://github.com/tfonteyn/TinyZXingWrapper
-    tiny_zxing_wrapper_version = "1.0.0"
+    tinyZxingWrapperVersion = "1.0.0"
 
     // https://github.com/zxing/zxing
-    zxing_core_version = "3.5.2"
+    zxingCoreVersion = "3.5.2"
 
     // https://github.com/ACRA/acra
-    acra_version = "5.11.0"
+    acraVersion = "5.11.0"
 
     // https://github.com/mockito/mockito
-    mockito_version = "5.4.0"
+    mockitoVersion = "5.4.0"
 
     // https://junit.org/junit5/docs/current/user-guide/#overview
-    jupiter_version = "5.10.0"
+    jupiterVersion = "5.10.0"
 
     // https://developer.android.com/jetpack/androidx/releases/test
-    androidx_arch_core_testing = "2.2.0"
-    androidx_test_core_version = "1.5.0"
-    androidx_test_runner_version = "1.5.2"
-    androidx_test_rules_version = "1.5.0"
+    androidxArchCoreTestingVersion = "2.2.0"
+    androidxTestCoreVersion = "1.5.0"
+    androidxTestRunnerVersion = "1.5.2"
+    androidxTestRulesVersion = "1.5.0"
 
     // needed for testing; due to internal android [wtf] this MUST be 1.6.1 for now
-    kotlinx_coroutines_android = "1.6.1"
+    kotlinxCoroutinesCoreVersion = "1.6.1"
 
-    mannodermaus_version = "1.3.0"
+    mannodermausVersion = "1.3.0"
 }
