--- a/core/build.gradle
+++ b/core/build.gradle
@@ -27,11 +27,11 @@ plugins {
 
 android {
     namespace = "com.hardbacknutter.nevertoomanybooks.core"
-    compileSdk = rootProject.ext.compile_sdk_version
+    compileSdk = rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        minSdk = rootProject.ext.min_sdk_version
-        targetSdk = rootProject.ext.target_sdk_version
+        minSdk = rootProject.ext.minSdkVersion
+        targetSdk = rootProject.ext.targetSdkVersion
 
         testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
         testInstrumentationRunnerArguments["runnerBuilder"] =
@@ -86,33 +86,33 @@ android {
 }
 
 dependencies {
-    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs_nio:${desugar_version}")
+    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs_nio:${desugarVersion}")
 
-    implementation("androidx.appcompat:appcompat:${androidx_appcompat_version}")
+    implementation("androidx.appcompat:appcompat:${androidxAppcompatVersion}")
     // core is needed for custom constraint helpers
-    implementation("androidx.constraintlayout:constraintlayout-core:${androidx_constraintlayout_core_version}")
+    implementation("androidx.constraintlayout:constraintlayout-core:${androidxConstraintlayoutCoreVersion}")
 
-    implementation("androidx.documentfile:documentfile:${androidx_documentfile_version}")
-    implementation("androidx.preference:preference:${androidx_preference_version}")
-    implementation("androidx.recyclerview:recyclerview:${androidx_recyclerview_version}")
+    implementation("androidx.documentfile:documentfile:${androidxDocumentfileVersion}")
+    implementation("androidx.preference:preference:${androidxPreferenceVersion}")
+    implementation("androidx.recyclerview:recyclerview:${androidxRecyclerviewVersion}")
 
-    implementation("com.google.android.material:material:${google_material_version}")
+    implementation("com.google.android.material:material:${googleMaterialVersion}")
 
     // local tests use JUnit5
-    testImplementation("org.mockito:mockito-core:${mockito_version}")
-    testImplementation("org.mockito:mockito-junit-jupiter:${mockito_version}")
+    testImplementation("org.mockito:mockito-core:${mockitoVersion}")
+    testImplementation("org.mockito:mockito-junit-jupiter:${mockitoVersion}")
 
-    testImplementation("org.junit.jupiter:junit-jupiter-api:${jupiter_version}")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${jupiter_version}")
-    testImplementation("org.junit.jupiter:junit-jupiter-params:${jupiter_version}")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:${jupiterVersion}")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${jupiterVersion}")
+    testImplementation("org.junit.jupiter:junit-jupiter-params:${jupiterVersion}")
 
-    androidTestImplementation("de.mannodermaus.junit5:android-test-core:${mannodermaus_version}")
-    androidTestRuntimeOnly("de.mannodermaus.junit5:android-test-runner:${mannodermaus_version}")
+    androidTestImplementation("de.mannodermaus.junit5:android-test-core:${mannodermausVersion}")
+    androidTestRuntimeOnly("de.mannodermaus.junit5:android-test-runner:${mannodermausVersion}")
 
     // device tests use JUnit4
-    androidTestImplementation("androidx.test:core:${androidx_test_core_version}")
-    androidTestImplementation("androidx.test:runner:${androidx_test_runner_version}")
-    androidTestImplementation("androidx.test:rules:${androidx_test_rules_version}")
+    androidTestImplementation("androidx.test:core:${androidxTestCoreVersion}")
+    androidTestImplementation("androidx.test:runner:${androidxTestRunnerVersion}")
+    androidTestImplementation("androidx.test:rules:${androidxTestRulesVersion}")
 
-    androidTestImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:${kotlinx_coroutines_android}")
+    androidTestImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:${kotlinxCoroutinesCoreVersion}")
 }
