USER_AGENT string moved to gradle config

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -36,6 +36,14 @@ android {
         testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
         testInstrumentationRunnerArguments["runnerBuilder"] =
                 "de.mannodermaus.junit5.AndroidJUnit5Builder"
+
+        /**
+         * RELEASE: 2023-08-15. Continuously update to latest version.
+         * Some sites don't return full data unless the user agent is set to a valid browser.
+         */
+        buildConfigField("String", "BROWSER_USER_AGENT",
+                "\"Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:109.0) Gecko/20100101 Firefox/116.0\"")
+
     }
 
     buildTypes {
