--- a/build.gradle
+++ b/build.gradle
@@ -19,17 +19,17 @@
  */
 
 plugins {
-    id("com.android.application") version '8.1.0' apply false
-    id("com.android.library") version '8.1.0' apply false
+    id("com.android.application") version '8.1.1' apply false
+    id("com.android.library") version '8.1.1' apply false
     // https://plugins.gradle.org/plugin/org.jetbrains.kotlin.android
-    id("org.jetbrains.kotlin.android") version "1.9.0" apply false
+    id("org.jetbrains.kotlin.android") version "1.9.10" apply false
     // https://github.com/mannodermaus/android-junit5
     // Don't forget to update ext.mannodermausVersion
     id("de.mannodermaus.android-junit5") version "1.9.3.0" apply false
 }
 
 tasks.register("clean", Delete) {
-    delete(rootProject.buildDir)
+    delete(rootProject.layout.buildDirectory)
 }
 
 ext {
