--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,7 @@ ext {
     // 1.8 needs Android 14 !
     androidxActivityVersion = "1.7.2"
 
-    androidxAnnotationVersion = "1.6.0"
+    androidxAnnotationVersion = '1.7.0'
     // 1.7 needs Android 14 !
     androidxAppcompatVersion = "1.6.1"
     // 1.3 needs Android 14 !
@@ -70,15 +70,14 @@ ext {
     // 2.2 needs Android 14 !
     androidxConstraintlayoutVersion = "2.1.4"
     androidxCoordinatorlayoutVersion = "1.2.0"
-    // 1.12 needs Android 14 !
-    androidxCoreVersion = "1.11.0-beta02"
+    androidxCoreVersion = "1.12.0"
     androidxCustomviewVersion = "1.2.0-alpha02"
     androidxDocumentfileVersion = "1.1.0-alpha01"
     androidxDrawerlayoutVersion = "1.2.0"
     androidxExifinterfaceVersion = "1.3.6"
     androidxFragmentVersion = "1.6.1"
     androidxInterpolatorVersion = "1.0.0"
-    androidxLifecycleVersion = "2.6.1"
+    androidxLifecycleVersion = '2.6.2'
     androidxPreferenceVersion = "1.2.1"
     androidxRecyclerviewVersion = "1.3.1"
 //        androidxSlidingpanelayoutVersion = "1.2.0"
