--- a/build.gradle
+++ b/build.gradle
@@ -56,18 +56,13 @@ ext {
 
     // https://developer.android.com/jetpack/androidx/versions
 
-    // 1.8 needs Android 14 !
-    androidxActivityVersion = "1.7.2"
-
+    androidxActivityVersion = "1.8.0-rc01"
     androidxAnnotationVersion = '1.7.0'
-    // 1.7 needs Android 14 !
     androidxAppcompatVersion = "1.6.1"
-    // 1.3 needs Android 14 !
-    androidxCameraxVersion = "1.2.3"
+    androidxCameraxVersion = "1.3.0-rc02"
     androidxCardviewVersion = "1.0.0"
-    androidxCollectionVersion = "1.3.0-beta01"
+    androidxCollectionVersion = "1.3.0-rc01"
     androidxConstraintlayoutCoreVersion = "1.0.4"
-    // 2.2 needs Android 14 !
     androidxConstraintlayoutVersion = "2.1.4"
     androidxCoordinatorlayoutVersion = "1.2.0"
     androidxCoreVersion = "1.12.0"
@@ -85,7 +80,7 @@ ext {
     androidxWindowVersion = "1.1.0"
 
     // https://github.com/material-components/material-components-android/releases
-    googleMaterialVersion = "1.9.0"
+    googleMaterialVersion = "1.10.0-rc01"
 
     //googleAutoServiceVersion = "1.0.1"
 
@@ -113,8 +108,8 @@ ext {
     androidxTestRunnerVersion = "1.5.2"
     androidxTestRulesVersion = "1.5.0"
 
-    // needed for testing; due to internal android [wtf] this MUST be 1.6.1 for now
-    kotlinxCoroutinesCoreVersion = "1.6.1"
+    // needed for testing; due to internal android [wtf] this MUST be 1.6.x for now
+    kotlinxCoroutinesCoreVersion = "1.6.4"
 
     mannodermausVersion = "1.3.0"
 }
