--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@
  */
 
 plugins {
-    id("com.android.application") version '8.1.2' apply false
-    id("com.android.library") version '8.1.2' apply false
+    id("com.android.application") version '8.2.0-rc01' apply false
+    id("com.android.library") version '8.2.0-rc01' apply false
     // https://plugins.gradle.org/plugin/org.jetbrains.kotlin.android
     id("org.jetbrains.kotlin.android") version "1.9.10" apply false
     // https://github.com/mannodermaus/android-junit5
@@ -56,12 +56,12 @@ ext {
 
     // https://developer.android.com/jetpack/androidx/versions
 
-    androidxActivityVersion = "1.8.0-rc01"
+    androidxActivityVersion = '1.8.0'
     androidxAnnotationVersion = '1.7.0'
     androidxAppcompatVersion = "1.6.1"
-    androidxCameraxVersion = "1.3.0-rc02"
+    androidxCameraxVersion = '1.3.0'
     androidxCardviewVersion = "1.0.0"
-    androidxCollectionVersion = "1.3.0-rc01"
+    androidxCollectionVersion = '1.3.0'
     androidxConstraintlayoutCoreVersion = "1.0.4"
     androidxConstraintlayoutVersion = "2.1.4"
     androidxCoordinatorlayoutVersion = "1.2.0"
@@ -74,13 +74,13 @@ ext {
     androidxInterpolatorVersion = "1.0.0"
     androidxLifecycleVersion = '2.6.2'
     androidxPreferenceVersion = "1.2.1"
-    androidxRecyclerviewVersion = "1.3.1"
+    androidxRecyclerviewVersion = '1.3.2'
 //        androidxSlidingpanelayoutVersion = "1.2.0"
     androidxViewpager2Version = "1.1.0-beta02"
     androidxWindowVersion = "1.1.0"
 
     // https://github.com/material-components/material-components-android/releases
-    googleMaterialVersion = "1.10.0-rc01"
+    googleMaterialVersion = '1.10.0'
 
     //googleAutoServiceVersion = "1.0.1"
 
@@ -97,7 +97,7 @@ ext {
     acraVersion = '5.11.2'
 
     // https://github.com/mockito/mockito
-    mockitoVersion = '5.5.0'
+    mockitoVersion = '5.6.0'
 
     // https://junit.org/junit5/docs/current/user-guide/#overview
     jupiterVersion = "5.10.0"
