--- a/metadata/app.id.yml
+++ b/metadata/app.id.yml
@@ -9,8 +9,6 @@
 Summary: book collection application, to keep track of your books and comics.
 Categories:
   - Reading
-  - Books
-  - Collection
 
 License: GPL-3.0-or-later
 SourceCode: https://github.com/tfonteyn/NeverTooManyBooks
@@ -24,12 +22,12 @@ Repo: https://github.com/tfonteyn/NeverTooManyBooks.git
 Binaries: https://github.com/tfonteyn/NeverTooManyBooks/releases/download/v%v/NeverTooManyBooks-v%v.apk
 
 Builds:
-  - versionName: '4.4.0'
-    versionCode: 53
-    commit: v4.4.0
+  - versionName: '5.1.0'
+    versionCode: 65
+    commit: v5.1.0
     subdir: app
-    gradle: yes
-    output: NeverTooManyBooks-v4.4.0.apk
+    gradle: [ 'release' ]
+    output: NeverTooManyBooks-v5.1.0.apk
 
 
 # MaintainerNotes: |-
@@ -41,4 +39,5 @@ Builds:
 AutoUpdateMode: Version
 UpdateCheckMode: Tags
 CurrentVersion: '4.4.0'
+AllowedAPKSigningKeys: ???
 CurrentVersionCode: 53
