--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ plugins {
     id("org.jetbrains.kotlin.android") version "1.9.10" apply false
     // https://github.com/mannodermaus/android-junit5
     // Don't forget to update ext.mannodermausVersion
-    id("de.mannodermaus.android-junit5") version "1.9.3.0" apply false
+    id("de.mannodermaus.android-junit5") version "1.10.0.0" apply false
 }
 
 tasks.register("clean", Delete) {
@@ -70,7 +70,7 @@ ext {
     androidxDocumentfileVersion = "1.1.0-alpha01"
     androidxDrawerlayoutVersion = "1.2.0"
     androidxExifinterfaceVersion = "1.3.6"
-    androidxFragmentVersion = "1.6.1"
+    androidxFragmentVersion = '1.6.2'
     androidxInterpolatorVersion = "1.0.0"
     androidxLifecycleVersion = '2.6.2'
     androidxPreferenceVersion = "1.2.1"
@@ -97,7 +97,7 @@ ext {
     acraVersion = '5.11.3'
 
     // https://github.com/mockito/mockito
-    mockitoVersion = '5.6.0'
+    mockitoVersion = '5.7.0'
 
     // https://junit.org/junit5/docs/current/user-guide/#overview
     jupiterVersion = "5.10.0"
@@ -111,5 +111,5 @@ ext {
     // needed for testing; due to internal android [wtf] this MUST be 1.6.x for now
     kotlinxCoroutinesCoreVersion = "1.6.4"
 
-    mannodermausVersion = "1.3.0"
+    mannodermausVersion = '1.4.0'
 }
