--- a/build.gradle
+++ b/build.gradle
@@ -85,7 +85,7 @@ ext {
 //    googleAutoServiceVersion = "1.1.1"
 
     // https://jsoup.org/
-    jsoupVersion = "1.16.2"
+    jsoupVersion = '1.17.1'
 
     // https://github.com/tfonteyn/TinyZXingWrapper
     tinyZxingWrapperVersion = "1.0.0"
@@ -108,8 +108,8 @@ ext {
     androidxTestRunnerVersion = "1.5.2"
     androidxTestRulesVersion = "1.5.0"
 
-    // needed for testing; due to internal android [wtf] this MUST be 1.6.x for now
-    kotlinxCoroutinesCoreVersion = "1.6.4"
+    // needed for testing
+    kotlinxCoroutinesCoreVersion = '1.7.3'
 
     mannodermausVersion = '1.4.0'
 }
