--- a/core/build.gradle
+++ b/core/build.gradle
@@ -122,5 +122,5 @@ dependencies {
     androidTestImplementation("androidx.test:runner:${androidxTestRunnerVersion}")
     androidTestImplementation("androidx.test:rules:${androidxTestRulesVersion}")
 
-    androidTestImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:${kotlinxCoroutinesCoreVersion}")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:${kotlinxCoroutinesCoreVersion}")
 }
