--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@
  */
 
 plugins {
-    id("com.android.application") version '8.2.0-rc03' apply false
-    id("com.android.library") version '8.2.0-rc03' apply false
+    id("com.android.application") version '8.2.0' apply false
+    id("com.android.library") version '8.2.0' apply false
     // https://plugins.gradle.org/plugin/org.jetbrains.kotlin.android
     id("org.jetbrains.kotlin.android") version "1.9.10" apply false
     // https://github.com/mannodermaus/android-junit5
