--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -18,9 +18,9 @@
 # along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
 #
 
-#Wed Oct 18 23:39:19 BST 2023
+#Sat Dec 09 23:12:53 GMT 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.4-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.5-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
