--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@
  */
 
 plugins {
-    id("com.android.application") version '8.3.0-rc02' apply false
-    id("com.android.library") version '8.3.0-rc02' apply false
+    id("com.android.application") version '8.3.0' apply false
+    id("com.android.library") version '8.3.0' apply false
     // https://plugins.gradle.org/plugin/org.jetbrains.kotlin.android
     id("org.jetbrains.kotlin.android") version "1.9.10" apply false
     // https://github.com/mannodermaus/android-junit5
@@ -97,7 +97,7 @@ ext {
     acraVersion = '5.11.3'
 
     // https://github.com/mockito/mockito
-    mockitoVersion = '5.10.0'
+    mockitoVersion = '5.11.0'
 
     // https://junit.org/junit5/docs/current/user-guide/#overview
     jupiterVersion = '5.10.2'
