--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,10 @@ if (project.hasProperty("NeverTooManyBooks.properties")) {
     }
 }
 
+kotlin {
+    jvmToolchain rootProject.ext.toolChain
+}
+
 android {
     namespace = "com.hardbacknutter.nevertoomanybooks"
     compileSdk = rootProject.ext.compileSdkVersion
@@ -62,9 +66,9 @@ android {
     }
 
     defaultConfig {
-        applicationId = rootProject.ext.applicationId
-        versionCode = rootProject.ext.applicationVersionCode
-        versionName = rootProject.ext.applicationVersionName
+        applicationId = "com.hardbacknutter.nevertoomanybooks"
+        versionCode = 75
+        versionName = "5.3.3"
 
         minSdk = rootProject.ext.minSdkVersion
         targetSdk = rootProject.ext.targetSdkVersion
@@ -104,9 +108,9 @@ android {
                     "proguard-rules.pro")
 
             resValue("string", "searchSuggestAuthority",
-                    "${applicationId}.SearchSuggestionProvider")
+                    "${defaultConfig.applicationId}.SearchSuggestionProvider")
             resValue("string", "fileProviderAuthority",
-                    "${applicationId}.GenericFileProvider")
+                    "${defaultConfig.applicationId}.GenericFileProvider")
 
             // Add the build UTC DateTime; ISO formatted
             buildConfigField("String", "TIMESTAMP",
@@ -131,9 +135,9 @@ android {
                             .format(DateTimeFormatter.ISO_LOCAL_DATE_TIME) + "\"")
 
             resValue("string", "searchSuggestAuthority",
-                    "${applicationId}.SearchSuggestionProvider.beta")
+                    "${defaultConfig.applicationId}.SearchSuggestionProvider.beta")
             resValue("string", "fileProviderAuthority",
-                    "${applicationId}.GenericFileProvider.beta")
+                    "${defaultConfig.applicationId}.GenericFileProvider.beta")
 
             // under development
             buildConfigField("boolean", "ENABLE_BOOKFINDER", "true")
@@ -144,9 +148,9 @@ android {
             applicationIdSuffix = ".debug"
 
             resValue("string", "searchSuggestAuthority",
-                    "${applicationId}.SearchSuggestionProvider.debug")
+                    "${defaultConfig.applicationId}.SearchSuggestionProvider.debug")
             resValue("string", "fileProviderAuthority",
-                    "${applicationId}.GenericFileProvider.debug")
+                    "${defaultConfig.applicationId}.GenericFileProvider.debug")
 
             // under development
             buildConfigField("boolean", "ENABLE_BOOKFINDER", "true")
@@ -213,7 +217,7 @@ android {
     applicationVariants.all {
         final variant ->
             variant.outputs.all {
-                outputFileName = "${rootProject.name}-${rootProject.ext.applicationVersionName}-${variant.name}.apk"
+                outputFileName = "${rootProject.name}-${defaultConfig.versionName}-${variant.name}.apk"
             }
     }
 
@@ -242,7 +246,7 @@ dependencies {
 
     coreLibraryDesugaring("com.android.tools:desugar_jdk_libs_nio:${desugarVersion}")
 
-    implementation("androidx.activity:activity:${androidxActivityVersion}")
+    implementation("androidx.activity:activity-ktx:${androidxActivityVersion}")
     implementation("androidx.annotation:annotation:${androidxAnnotationVersion}")
     implementation("androidx.appcompat:appcompat:${androidxAppcompatVersion}")
     implementation("androidx.cardview:cardview:${androidxCardviewVersion}")
@@ -251,17 +255,17 @@ dependencies {
     implementation("androidx.constraintlayout:constraintlayout-core:${androidxConstraintlayoutCoreVersion}")
     implementation("androidx.constraintlayout:constraintlayout:${androidxConstraintlayoutVersion}")
     implementation("androidx.coordinatorlayout:coordinatorlayout:${androidxCoordinatorlayoutVersion}")
-    implementation("androidx.core:core:${androidxCoreVersion}")
+    implementation("androidx.core:core-ktx:${androidxCoreVersion}")
     implementation("androidx.customview:customview:${androidxCustomviewVersion}")
     implementation("androidx.documentfile:documentfile:${androidxDocumentfileVersion}")
     implementation("androidx.drawerlayout:drawerlayout:${androidxDrawerlayoutVersion}")
     implementation("androidx.exifinterface:exifinterface:${androidxExifinterfaceVersion}")
-    implementation("androidx.fragment:fragment:${androidxFragmentVersion}")
+    implementation("androidx.fragment:fragment-ktx:${androidxFragmentVersion}")
 
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:${androidxLifecycleVersion}")
     implementation("androidx.lifecycle:lifecycle-livedata-ktx:${androidxLifecycleVersion}")
 
-    implementation("androidx.preference:preference:${androidxPreferenceVersion}")
+    implementation("androidx.preference:preference-ktx:${androidxPreferenceVersion}")
     implementation("androidx.recyclerview:recyclerview:${androidxRecyclerviewVersion}")
 //    implementation("androidx.slidingpanelayout:slidingpanelayout:${androidxSlidingpanelayoutVersion}")
     implementation("androidx.viewpager2:viewpager2:${androidxViewpager2Version}")
