--- a/core/build.gradle
+++ b/core/build.gradle
@@ -25,6 +25,10 @@ plugins {
     id("de.mannodermaus.android-junit5")
 }
 
+kotlin {
+    jvmToolchain rootProject.ext.toolChain
+}
+
 android {
     namespace = "com.hardbacknutter.nevertoomanybooks.core"
     compileSdk = rootProject.ext.compileSdkVersion
@@ -101,7 +105,7 @@ dependencies {
     implementation("androidx.constraintlayout:constraintlayout-core:${androidxConstraintlayoutCoreVersion}")
 
     implementation("androidx.documentfile:documentfile:${androidxDocumentfileVersion}")
-    implementation("androidx.preference:preference:${androidxPreferenceVersion}")
+    implementation("androidx.preference:preference-ktx:${androidxPreferenceVersion}")
     implementation("androidx.recyclerview:recyclerview:${androidxRecyclerviewVersion}")
 
     implementation("com.google.android.material:material:${googleMaterialVersion}")
