--- a/gradle.properties
+++ b/gradle.properties
@@ -33,4 +33,5 @@ android.useAndroidX=true
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 android.nonFinalResIds=true
+org.gradle.configuration-cache=true
 # android.disableResourceValidation=true
