--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 /.idea/misc.xml
 /.idea/modules.xml
 /.idea/navEditor.xml
+/.idea/other.xml
 /.idea/render.experimental.xml
 /.idea/shelf/
 /.idea/workspace.xml
