--- a/build.gradle
+++ b/build.gradle
@@ -48,16 +48,16 @@ ext {
 
     // https://developer.android.com/jetpack/androidx/versions
 
-    androidxActivityVersion = '1.8.2'
+    androidxActivityVersion = '1.9.0'
     androidxAnnotationVersion = '1.7.1'
     androidxAppcompatVersion = "1.6.1"
-    androidxCameraxVersion = '1.3.2'
+    androidxCameraxVersion = '1.3.3'
     androidxCardviewVersion = "1.0.0"
     androidxCollectionVersion = '1.4.0'
     androidxConstraintlayoutCoreVersion = "1.0.4"
     androidxConstraintlayoutVersion = "2.1.4"
     androidxCoordinatorlayoutVersion = "1.2.0"
-    androidxCoreVersion = "1.12.0"
+    androidxCoreVersion = '1.13.0'
     androidxCustomviewVersion = "1.2.0-alpha02"
     androidxDocumentfileVersion = "1.1.0-alpha01"
     androidxDrawerlayoutVersion = "1.2.0"
@@ -99,7 +99,7 @@ ext {
     androidxTestRulesVersion = "1.5.0"
 
     // needed for testing
-    kotlinxCoroutinesCoreVersion = '1.7.3'
+    kotlinxCoroutinesCoreVersion = '1.8.0'
 
     mannodermausVersion = '1.4.0'
 }
