- add proguard-rules.pro due to gradle plugin 8.4 needs - add buildTypes.debug

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -57,7 +57,11 @@ android {
                     "proguard-rules.pro")
         }
         beta {
-            initWith release
+            initWith(release)
+        }
+        debug {
+            // Enforce testing the proguard rules during debug-builds.
+            initWith(release)
         }
     }
 
