--- a/fastscroller/build.gradle
+++ b/fastscroller/build.gradle
@@ -40,10 +40,11 @@ android {
                     "proguard-rules.pro")
         }
         beta {
-            initWith release
+            initWith(release)
         }
         debug {
-            initWith release
+            // Enforce testing the proguard rules during debug-builds.
+            initWith(release)
         }
     }
 
