--- a/core/build.gradle
+++ b/core/build.gradle
@@ -116,6 +116,9 @@ dependencies {
 
     implementation("com.google.android.material:material:${googleMaterialVersion}")
 
+    // See project build.gradle
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:${kotlinxCoroutinesCoreVersion}")
+
     // local tests use JUnit5
     testImplementation("org.mockito:mockito-core:${mockitoVersion}")
     testImplementation("org.mockito:mockito-junit-jupiter:${mockitoVersion}")
@@ -131,6 +134,4 @@ dependencies {
     androidTestImplementation("androidx.test:core:${androidxTestCoreVersion}")
     androidTestImplementation("androidx.test:runner:${androidxTestRunnerVersion}")
     androidTestImplementation("androidx.test:rules:${androidxTestRulesVersion}")
-
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:${kotlinxCoroutinesCoreVersion}")
 }
