--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,11 @@
 /.idea/checkstyleidea-libs
 /.idea/deploymentTargetDropDown.xml
 /.idea/deploymentTargetSelector.xml
-/.idea/dictionaries/tom.xml
 /.idea/dictionaries/tomf.xml
 /.idea/inspectionProfiles/profiles_settings.xml
 /.idea/libraries
 /.idea/misc.xml
+/.idea/migrations.xml
 /.idea/modules.xml
 /.idea/navEditor.xml
 /.idea/other.xml
