--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,29 @@
 *.iml
 .gradle
+.DS_Store
+.externalNativeBuild
+
 /local.properties
+/build
+/captures
+
+/.idea/caches/
+/.idea/checkstyleidea-libs
+/.idea/dictionaries/
+/.idea/libraries/
+/.idea/runConfigurations/
+/.idea/shelf/
+
 /.idea/androidTestResultsUserPreferences.xml
 /.idea/assetWizardSettings.xml
-/.idea/caches
-/.idea/checkstyleidea-libs
 /.idea/deploymentTargetDropDown.xml
 /.idea/deploymentTargetSelector.xml
-/.idea/dictionaries/tomf.xml
-/.idea/inspectionProfiles/profiles_settings.xml
-/.idea/libraries
 /.idea/misc.xml
 /.idea/migrations.xml
 /.idea/modules.xml
 /.idea/navEditor.xml
 /.idea/other.xml
 /.idea/render.experimental.xml
-/.idea/shelf/
 /.idea/workspace.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
+
 /app/beta/output-metadata.json
