--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,6 +103,7 @@ android {
 
         // Under development; disabled for release builds in buildTypes.release
         buildConfigField("boolean", "ENABLE_BOOKFINDER", "true")
+        buildConfigField("boolean", "ENABLE_DNB_DE", "true")
         buildConfigField("boolean", "ENABLE_STRIP_INFO_LOGIN", "true")
         buildConfigField("boolean", "EMBEDDED_BARCODE_SCANNER", "false")
     }
@@ -127,6 +128,7 @@ android {
 
             // under development
             buildConfigField("boolean", "ENABLE_BOOKFINDER", "false")
+            buildConfigField("boolean", "ENABLE_DNB_DE", "false")
             buildConfigField("boolean", "ENABLE_STRIP_INFO_LOGIN", "false")
             buildConfigField("boolean", "EMBEDDED_BARCODE_SCANNER", "false")
         }
