remove obsolete locales_config.xml

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -175,6 +175,13 @@ android {
         buildConfig = true
     }
 
+    // ENHANCE: https://developer.android.com/guide/topics/resources/app-languages#auto-localeconfig
+    //    android {
+    //        androidResources {
+    //            generateLocaleConfig = true
+    //        }
+    //    }
+
     testOptions {
         unitTests {
             includeAndroidResources = true
