--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ ext {
     androidxDocumentfileVersion = "1.1.0-alpha01"
     androidxDrawerlayoutVersion = "1.2.0"
     androidxExifinterfaceVersion = '1.3.7'
-    androidxFragmentVersion = '1.8.0'
+    androidxFragmentVersion = '1.8.1'
     androidxInterpolatorVersion = "1.0.0"
     androidxLifecycleVersion = '2.8.2'
     androidxPreferenceVersion = "1.2.1"
@@ -90,13 +90,13 @@ ext {
     mockitoVersion = '5.12.0'
 
     // https://junit.org/junit5/docs/current/user-guide/#overview
-    jupiterVersion = '5.10.2'
+    jupiterVersion = '5.10.3'
 
     // https://developer.android.com/jetpack/androidx/releases/test
     androidxArchCoreTestingVersion = "2.2.0"
-    androidxTestCoreVersion = "1.5.0"
-    androidxTestRunnerVersion = "1.5.2"
-    androidxTestRulesVersion = "1.5.0"
+    androidxTestCoreVersion = '1.6.1'
+    androidxTestRunnerVersion = '1.6.1'
+    androidxTestRulesVersion = '1.6.1'
 
     // An explicit dependency must be added to avoid gradle/studio/bugs?
     // adding (in some unknown circumstances) two different kotlin-stdlib versions
