re-enable debug mode for core/fs modules

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -57,11 +57,10 @@ android {
                     "proguard-rules.pro")
         }
         beta {
-            initWith(release)
+            minifyEnabled false
         }
         debug {
-            // Enforce testing the proguard rules during debug-builds.
-            initWith(release)
+            minifyEnabled false
         }
     }
 
