--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,6 +111,7 @@ android {
         // Under development; disabled for release builds in buildTypes.release
         buildConfigField("boolean", "ENABLE_BOOKFINDER", "true")
         buildConfigField("boolean", "ENABLE_DNB_DE", "true")
+        buildConfigField("boolean", "ENABLE_DOUBAN", "true")
         buildConfigField("boolean", "ENABLE_STRIP_INFO_LOGIN", "true")
         buildConfigField("boolean", "EMBEDDED_BARCODE_SCANNER", "false")
     }
@@ -136,6 +137,7 @@ android {
             // under development
             buildConfigField("boolean", "ENABLE_BOOKFINDER", "false")
             buildConfigField("boolean", "ENABLE_DNB_DE", "false")
+            buildConfigField("boolean", "ENABLE_DOUBAN", "false")
             buildConfigField("boolean", "ENABLE_STRIP_INFO_LOGIN", "false")
             buildConfigField("boolean", "EMBEDDED_BARCODE_SCANNER", "false")
         }
